DBZ-227 Enabling Debezium to be built on Java 9